style adjustment for calendar

--- a/calendar.html
+++ b/calendar.html
@@ -17,15 +17,6 @@ subtitle: Canlendar for Reading Group, Learning Group.
             .tg .tg-24i8{font-size:24px;vertical-align:top}
         </style>
         <style unselectable="on">
-            #wrap {
-                width:90%;
-                height:90%;
-                padding:0;
-                position:relative;
-                left:0px;
-                top:0px;
-                overflow:hidden;
-            }
             #frame {
                 width:90%;
                 height:90%;
@@ -38,7 +29,7 @@ subtitle: Canlendar for Reading Group, Learning Group.
                 -ms-zoom:0.7;
             }
         </style>
-        <div id="wrap" unselectable="on">
+        <div class="tg" unselectable="on">
             <iframe id="frame" src="https://outlook.live.com/owa//calendar/00000000-0000-0000-0000-000000000000/0edae97b-c666-4f04-900b-9c4207189518/cid-B9796FC8171B730C/index.html"></iframe>
         </div>
 
