--- a/calendar.html
+++ b/calendar.html
@@ -15,10 +15,11 @@ subtitle: Canlendar for Reading Group, Learning Group.
             .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 9px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#fff;background-color:#26ADE4;border-top-width:1px;border-bottom-width:1px;}
             .tg .tg-peaf{font-size:24px}
             .tg .tg-24i8{font-size:24px;vertical-align:top}
-        </style>
-        <style unselectable="on">
+
             #frame {
                 position:relative;
+                height: inherit;
+                width: inherit;
                 left:0px;
                 top:0px;
                 border: 0px;
@@ -27,7 +28,7 @@ subtitle: Canlendar for Reading Group, Learning Group.
                 -ms-zoom:0.7;
             }
         </style>
-        <div class="tg" unselectable="on">
+        <div class="tg" unselectable="on" style="height: 500px; width: 90%">
             <iframe id="frame" src="https://outlook.live.com/owa//calendar/00000000-0000-0000-0000-000000000000/0edae97b-c666-4f04-900b-9c4207189518/cid-B9796FC8171B730C/index.html"></iframe>
         </div>
 
