--- a/calendar.html
+++ b/calendar.html
@@ -276,9 +276,9 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
     <td class="tg-24i8"></td>
   </tr>
   <tr>
-    <td class="tg-24i8">Xiang Zhang</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
+    <td class="tg-24i8">Shuai Zhang</td>
+    <td class="tg-24i8">12 Feb 2017</td>
+    <td class="tg-24i8">CNN</td>
     <td class="tg-24i8"></td>
   </tr>
   <tr>
@@ -288,7 +288,7 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
     <td class="tg-24i8"></td>
   </tr>
   <tr>
-    <td class="tg-24i8">Shuai Zhang</td>
+    <td class="tg-24i8">Xiang Zhang</td>
     <td class="tg-24i8"></td>
     <td class="tg-24i8"></td>
     <td class="tg-24i8"></td>
