--- a/_posts/2017-03-06-Machine-learning-tutorial-for-beginners.html
+++ b/_posts/2017-03-06-Machine-learning-tutorial-for-beginners.html
@@ -7,9 +7,7 @@
 <link rel="stylesheet" href="https://stackedit.io/res-min/themes/base.css" />
 <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
 </head>
-<body><div class="container"><h1 id="machine-learning-tutorial-for-beginners">Machine learning tutorial for beginners</h1>
-
-<p>Questions like “What is the stock price of next day?” or “What is the weather tomorrow?” is very difficult to give answer because there is no perfect algorithm can predict the future with numerical calculation.  <strong>Machine learning</strong><a href="#fn:machinelearning" id="fnref:machinelearning" title="See footnote" class="footnote">1</a> was born for this, which is subfield of computer science that gives computers the ability to learn without being explicitly programmed. There are many articles and paper discuss about what is machine learning and how to conduct experiments on machine learning,  this  will not explain the definition and concept that can be searched easily on the internet. I will go through the steps that people normally confused and get stuck in.  </p>
+<body><div class="container"><p>Questions like “What is the stock price of next day?” or “What is the weather tomorrow?” is very difficult to give answer because there is no perfect algorithm can predict the future with numerical calculation.  <strong>Machine learning</strong><a href="#fn:machinelearning" id="fnref:machinelearning" title="See footnote" class="footnote">1</a> was born for this, which is subfield of computer science that gives computers the ability to learn without being explicitly programmed. There are many articles and paper discuss about what is machine learning and how to conduct experiments on machine learning,  this  will not explain the definition and concept that can be searched easily on the internet. I will go through the steps that people normally confused and get stuck in.  </p>
 
 <blockquote>
   <p><strong>Machine Learning solves the problem that cannot be solved by numerical means alone. </strong></p>
