--- a/calendar.html
+++ b/calendar.html
@@ -25,115 +25,115 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
     <td class="tg-24i8">KDD</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">17th, Feb.</td>
-    <td class="tg-24i8">http://www.kdd.org/kdd2017/</td>
+	  <td class="tg-24i8"><a href="hrefhttp://www.kdd.org/kdd2017/">kdd2017</a></td>
   </tr>
   <tr>
     <td class="tg-24i8">Ubicomp</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">15th, Apr.</td>
-    <td class="tg-24i8">http://ubicomp.org/ubicomp2017/</td>
+    <td class="tg-24i8"><a href="http://ubicomp.org/ubicomp2017/">ubicomp2017</a></td>
   </tr>
   <tr>
     <td class="tg-24i8">SIGIR</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8"><SPAN style="TEXT-DECORATION: line-through">17th, Jan.</SPAN></td>
-    <td class="tg-24i8">http://sigir.org/sigir2017/</td>
+    <td class="tg-24i8"><a href="http://sigir.org/sigir2017/">sigir2017</a></td>
   </tr>
   <tr>
     <td class="tg-24i8">CIKM</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">9th, May.</td>
-    <td class="tg-24i8">http://cikm2017.org/</td>
+    <td class="tg-24i8"><a href="http://cikm2017.org/">cikm2017</a></td>
   </tr>
   <tr>
     <td class="tg-24i8">RecSys</td>
     <td class="tg-24i8">B</td>
     <td class="tg-24i8">3rd, Apr.</td>
-    <td class="tg-24i8">https://recsys.acm.org/recsys17/</td>
+    <td class="tg-24i8"><a href="https://recsys.acm.org/recsys17/">recsys17</a></td>
   </tr>
   <tr>
     <td class="tg-24i8">ICDM</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">5th, Jun</td>
-    <td class="tg-24i8">http://icdm2017.bigke.org/</td>
+    <td class="tg-24i8"><a href="http://icdm2017.bigke.org/">icdm2017</a></td>
   </tr>
   <tr>
     <td class="tg-24i8">WSDM</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">Aug.</td>
-    <td class="tg-24i8">http://www.wsdm-conference.org/2017/</td>
+    <td class="tg-24i8"><a href="http://www.wsdm-conference.org/2017/">wsdm2017</a></td>
   </tr>
   <tr>
     <td class="tg-24i8">WISE</td>
     <td class="tg-24i8">A</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8">http://www.wise-conferences.org/</td>
+    <td class="tg-24i8">April 09,April 16</td>
+    <td class="tg-24i8"><a href="http://www.wise-conferences.org/">wise2017</a></td>
   </tr>
   <tr>
     <td class="tg-24i8">ECML</td>
     <td class="tg-24i8">A</td>
     <td class="tg-24i8">13th, Apr; 20th, Apr.</td>
-    <td class="tg-24i8">http://ecmlpkdd2017.org/</td>
+    <td class="tg-24i8"><a href="http://ecmlpkdd2017.org/">ecmlpkdd2017</a></td>
   </tr>
   <tr>
     <td class="tg-24i8">ICML</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">Feb 24, 2017</td>
-    <td class="tg-24i8">https://2017.icml.cc/</td>
+    <td class="tg-24i8"><a href="https://2017.icml.cc/">icml2017</a></td>
   </tr>
   <tr>
     <td class="tg-24i8">SDM</td>
     <td class="tg-24i8">A</td>
     <td class="tg-24i8">Oct</td>
-    <td class="tg-24i8">http://www.siam.org/meetings/sdm17/</td>
+    <td class="tg-24i8"><a href="http://www.siam.org/meetings/sdm17/">sdm17</a></td>
   </tr>
   <tr>
     <td class="tg-24i8">SIGGRAPH</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">14 February</td>
-    <td class="tg-24i8">http://s2017.siggraph.org/</td>	  
+    <td class="tg-24i8"><a href="http://s2017.siggraph.org/">s2017</a></td>	  
   </tr>
   <tr>
     <td class="tg-24i8">IJCAI</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">19th,Feb, 2017</td>
-    <td class="tg-24i8">http://ijcai-17.org/</td>	  
+    <td class="tg-24i8"><a href="http://ijcai-17.org/">ijcai2017</a></td>	  
   </tr>
   <tr>
     <td class="tg-24i8">NIPS</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8"></td>
-    <td class="tg-24i8">https://nips.cc/Conferences/2017</td>	  
+    <td class="tg-24i8"><a href="https://nips.cc/Conferences/2017">nips2017</a></td>	  
   </tr>
   <tr>
     <td class="tg-24i8">WWW</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8"></td>
-    <td class="tg-24i8">http://www.www2017.com.au/</td>	  
+    <td class="tg-24i8"><a href="http://www.www2017.com.au/">www2017</a></td>	  
   </tr>
   <tr>
     <td class="tg-24i8">AAAI</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8"></td>
-    <td class="tg-24i8">http://www.aaai.org/Conferences/AAAI/aaai17.php</td>	  
+    <td class="tg-24i8"><a href="http://www.aaai.org/Conferences/AAAI/aaai17.php">aaai17</a></td>	  
   </tr>
   <tr>
     <td class="tg-24i8">ICONIP</td>
     <td class="tg-24i8">A</td>
     <td class="tg-24i8">Jun 10</td>
-    <td class="tg-24i8">http://www.iconip2017.org/papers.html</td>	  
+    <td class="tg-24i8"><a href="http://www.iconip2017.org/papers.html">iconip2017</a></td>	  
   </tr>
   <tr>
     <td class="tg-24i8">ICWS</td>
     <td class="tg-24i8">A</td>
 	  <td class="tg-24i8"><SPAN style="TEXT-DECORATION: line-through">February 6</SPAN></td>
-    <td class="tg-24i8">http://icws.org/2017/</td>	  
+    <td class="tg-24i8"><a href="http://icws.org/2017/">icws2017</a></td>	  
   </tr>
   <tr>
     <td class="tg-24i8">ICSOC</td>
     <td class="tg-24i8">A</td>
     <td class="tg-24i8">June 6</td>
-    <td class="tg-24i8">http://www.icsoc.spilab.es/</td>	  
+    <td class="tg-24i8"><a href="http://www.icsoc.spilab.es/">icsoc2017</a></td>	  
   </tr>	
 	
 </table>
