--- a/opensource.html
+++ b/opensource.html
@@ -1,7 +1,6 @@
 ---
 title: Open Source
-heading: Open code and datasets
-subtitle: See some of our proud opensource project.
+subtitle: Open code and datasets.
 ---
 
 <section class="diagonal patterned">
