--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: InsData
 <section class="diagonal patterned">
 	<div class="container halves">
 		<div>
-			<h3 class="editable" style="text-color:red">News</h3>
+			<h3 class="editable"><font color="FF0000">News</font></h3>
 			<p class="editable">Welcome Kaixuan Chen to join our group in semester 1 2017!</p>
 			<p class="editable">Manqing dong, Shuai Zhang, Chaoran Huang join the IJCAI 2017 Alibaba Tianchi Contest</p>
 		</div>
