--- a/opensource.html
+++ b/opensource.html
@@ -1,8 +1,8 @@
 ---
 subtitle: Open code and datasets.
 ---
-
-<section class="diagonal patterned">
+<!-- <section class="diagonal patterned"> -->
+<section class="diagonal">
 	<div class="container">
 	    <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_clients/" class="btn"><strong>&#9998;</strong> Manage Clients</a></p>
 		<ul class="image-grid">
