--- a/people.html
+++ b/people.html
@@ -2,7 +2,7 @@
 subtitle: Meet our brilliant team.
 ---
 
-<section class="diagonal patterned">
+<section class="diagonal">
 	<div class="container">
 		<li style="font-size:30px;">Group leader &nbsp;&nbsp;&nbsp;&nbsp;<a href="http://linayao.com/">Lina Yao</a></li><br><br>
 		<ul></ul>
