--- a/opensource.html
+++ b/opensource.html
@@ -4,8 +4,7 @@ subtitle: Open code and datasets.
 <!-- <section class="diagonal patterned"> -->
 <section class="diagonal">
 	<div class="container">
-	    <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_clients/" class="btn"><strong>&#9998;</strong> Manage Clients</a></p>
-		<ul class="image-grid">
+		<!-- <ul class="image-grid">
 			{% for client in site.clients %}
 				<li>
 					<a href="{{ site.baseurl }}{{ client.url }}">
@@ -19,6 +18,6 @@ subtitle: Open code and datasets.
 			{% endfor %}
 			<li class="filler"></li>
 			<li class="filler"></li>
-		</ul>
+		</ul>-->
 	</div>
 </section>
