--- a/opensource.html
+++ b/opensource.html
@@ -4,7 +4,7 @@ subtitle: Open code and datasets.
 <!-- <section class="diagonal patterned"> -->
 <section class="diagonal">
 	<div class="container">
-		<ul><a href="https://arxiv.org/abs/1702.06830">Enhancing Mind Controlled Smart Living Through Recurrent Neural Networks</a>: <a href="https://github.com/xiangzhang1015/EEG-based-Control">Code</a></ul>
+		<ul>Enhancing Mind Controlled Smart Living Through Recurrent Neural Networks;<a href="https://arxiv.org/abs/1702.06830">Paper</a>;<a href="https://github.com/xiangzhang1015/EEG-based-Control">Code</a></ul>
 		<!-- <ul class="image-grid">
 			{% for client in site.clients %}
 				<li>
