--- a/opensource.html
+++ b/opensource.html
@@ -1,27 +1,11 @@
 ---
-subtitle: Open code and datasets.
+subtitle: Open code and datasets
 ---
-
 <!-- <section class="diagonal patterned"> -->
 <section class="diagonal">
 	<div class="container">
 		<div>
 		<ul>Enhancing Mind Controlled Smart Living Through Recurrent Neural Networks,<a href="https://arxiv.org/abs/1702.06830">Paper</a>,<a href="https://github.com/xiangzhang1015/EEG-based-Control">Code</a></ul>
 		</div>
-			<!-- <ul class="image-grid">
-			{% for client in site.clients %}
-				<li>
-					<a href="{{ site.baseurl }}{{ client.url }}">
-						<img src="{% include relative-src.html src=client.image_path %}" alt="{{ person.name }}">
-						<div class="details">
-							<div class="name">{{ client.name }}</div>
-							<div class="position">{{ client.subtitle }}</div>
-						</div>
-					</a>
-				</li>
-			{% endfor %}
-			<li class="filler"></li>
-			<li class="filler"></li>
-		</ul>-->
 	</div>
 </section>
