--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@ map:
 <section class="diagonal">
 	<div class="container">
 		<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
-			<input type="hidden" name="_to" value="linayao@unsw.edu.au" />
+			<input type="hidden" name="_to" value="lina.yao@unsw.edu.au" />
 			<input type="text" name="_gotcha" style="display: none;" />
 
 			<div class="halves">
@@ -26,7 +26,7 @@ map:
 			</div>
 
 			<label for="email">Email Address</label>
-			<input type="email" name="email" id="email" placeholder="linayao@unsw.edu.au" required />
+			<input type="email" name="email" id="email" placeholder="lina.yao@unsw.edu.au" required />
 
 			<label for="message">Message</label>
 			<textarea name="message" id="message" placeholder="Hi There..."></textarea>
