--- a/calendar.html
+++ b/calendar.html
@@ -133,6 +133,12 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
     <td class="tg-24i8">June 6</td>
     <td class="tg-24i8"><a href="http://www.icsoc.spilab.es/">icsoc2017</a></td>	  
   </tr>	
+  <tr>
+    <td class="tg-24i8">CSCW</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8">May 27</td>
+    <td class="tg-24i8"><a href="https://cscw.acm.org/2017/">CSCW2017</a></td>	  
+  </tr>	
 	
 </table>
 <br>
