--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: InsData
 	<div class="container halves">
 		<div>
 			<h3 class="editable"><font color="FF0000">News</font></h3>
-			<p class="editable">Shuai Zhang, Xiang Zhang join the KDD Cup 2017 contest</p>
+			<p class="editable">Shuai Zhang, Xiang Zhang, Manqing Dong join the KDD Cup 2017 contest</p>
 			<p class="editable">Welcome Kaixuan Chen to join our group in semester 1 2017</p>
 			<p class="editable">Manqing dong, Shuai Zhang, Chaoran Huang join the IJCAI 2017 Alibaba Tianchi Contest</p>
 		</div>
