--- a/calendar.html
+++ b/calendar.html
@@ -139,6 +139,12 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
     <td class="tg-24i8">May 27</td>
     <td class="tg-24i8"><a href="https://cscw.acm.org/2017/">CSCW2017</a></td>	  
   </tr>	
+  <tr>
+    <td class="tg-24i8">PAKDD</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="">PAKDD2018</a></td>	  
+  </tr>	
 	
 </table>
 <br>
