--- a/calendar.html
+++ b/calendar.html
@@ -18,134 +18,183 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
     <th class="tg-24i8">Rank</th>
     <th class="tg-24i8">Deadline</th>
     <th class="tg-24i8">Link</th>
+   <th class="tg-24i8">Full Name of the Conference</th>
   </tr>
   <tr>
     <td class="tg-24i8">KDD</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">17th, Feb.</td>
-	  <td class="tg-24i8"><a href="hrefhttp://www.kdd.org/kdd2017/">kdd2017</a></td>
+<td class="tg-24i8"><a href="http://www.kdd.org/kdd2017/">kdd2017</a></td>
+ 	<td class="tg-24i8">International Conference on Knowledge Discovery and Data Mining</td>
   </tr>
   <tr>
     <td class="tg-24i8">Ubicomp</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">15th, Apr.</td>
     <td class="tg-24i8"><a href="http://ubicomp.org/ubicomp2017/">ubicomp2017</a></td>
+	  <td class="tg-24i8">International Joint Conference on Pervasive and Ubiquitous Computing</td>
   </tr>
   <tr>
     <td class="tg-24i8">SIGIR</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8"><SPAN style="TEXT-DECORATION: line-through">17th, Jan.</SPAN></td>
     <td class="tg-24i8"><a href="http://sigir.org/sigir2017/">sigir2017</a></td>
+<td class="tg-24i8">International Conference on Research and Development in Information Retrieval</td>
   </tr>
   <tr>
     <td class="tg-24i8">CIKM</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">16, May.</td>
     <td class="tg-24i8"><a href="http://cikm2017.org/">cikm2017</a></td>
+    <td class="tg-24i8">International Conference on Information and Knowledge Management</td>  
   </tr>
   <tr>
     <td class="tg-24i8">RecSys</td>
     <td class="tg-24i8">B</td>
     <td class="tg-24i8">3rd, Apr.</td>
     <td class="tg-24i8"><a href="https://recsys.acm.org/recsys17/">recsys17</a></td>
+<td class="tg-24i8">International Conference on Recommender Systems</td>  
   </tr>
   <tr>
     <td class="tg-24i8">ICDM</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">5th, Jun</td>
     <td class="tg-24i8"><a href="http://icdm2017.bigke.org/">icdm2017</a></td>
+	  <td class="tg-24i8">International Conference on Data Mining</td>  
   </tr>
   <tr>
     <td class="tg-24i8">WSDM</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">Aug.</td>
     <td class="tg-24i8"><a href="http://www.wsdm-conference.org/2017/">wsdm2017</a></td>
+	  <td class="tg-24i8">International Conference on Web Search and Data Mining</td>  
   </tr>
   <tr>
     <td class="tg-24i8">WISE</td>
     <td class="tg-24i8">A</td>
     <td class="tg-24i8">April 09,April 16</td>
     <td class="tg-24i8"><a href="http://www.wise-conferences.org/">wise2017</a></td>
+	  <td class="tg-24i8">International Conference on Web Information Systems Engineering</td>  
   </tr>
   <tr>
     <td class="tg-24i8">ECML</td>
     <td class="tg-24i8">A</td>
     <td class="tg-24i8">13th, Apr; 20th, Apr.</td>
     <td class="tg-24i8"><a href="http://ecmlpkdd2017.org/">ecmlpkdd2017</a></td>
+	  <td class="tg-24i8">European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Database </td>  
   </tr>
   <tr>
     <td class="tg-24i8">ICML</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">Feb 24, 2017</td>
     <td class="tg-24i8"><a href="https://2017.icml.cc/">icml2017</a></td>
+	  <td class="tg-24i8">International Conference on Machine Learning</td>  
   </tr>
   <tr>
     <td class="tg-24i8">SDM</td>
     <td class="tg-24i8">A</td>
     <td class="tg-24i8">Oct</td>
     <td class="tg-24i8"><a href="http://www.siam.org/meetings/sdm17/">sdm17</a></td>
+	  <td class="tg-24i8">SIAM International Conference on Data Mining</td>  
   </tr>
   <tr>
     <td class="tg-24i8">SIGGRAPH</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">14 February</td>
     <td class="tg-24i8"><a href="http://s2017.siggraph.org/">s2017</a></td>	  
+	  <td class="tg-24i8">SIG International Conference on Computer Graphics and Interactive Techniques</td>  
   </tr>
   <tr>
     <td class="tg-24i8">IJCAI</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">19th,Feb, 2017</td>
-    <td class="tg-24i8"><a href="http://ijcai-17.org/">ijcai2017</a></td>	  
+    <td class="tg-24i8"><a href="http://ijcai-17.org/">ijcai2017</a></td>
+	  <td class="tg-24i8">International Joint Conference on Artificial Intelligence</td>  
   </tr>
   <tr>
     <td class="tg-24i8">NIPS</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8"></td>
     <td class="tg-24i8"><a href="https://nips.cc/Conferences/2017">nips2017</a></td>	  
+	  <td class="tg-24i8">Advances in Neural Information Processing Systems</td>  
   </tr>
   <tr>
     <td class="tg-24i8">WWW</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8"></td>
-    <td class="tg-24i8"><a href="http://www.www2017.com.au/">www2017</a></td>	  
+    <td class="tg-24i8"><a href="http://www.www2017.com.au/">www2017</a></td>	
+	  <td class="tg-24i8">International World Wide Web Conference</td>  
   </tr>
   <tr>
     <td class="tg-24i8">AAAI</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8"></td>
-    <td class="tg-24i8"><a href="http://www.aaai.org/Conferences/AAAI/aaai17.php">aaai17</a></td>	  
+    <td class="tg-24i8"><a href="http://www.aaai.org/Conferences/AAAI/aaai17.php">aaai17</a></td>	
+	  <td class="tg-24i8">National Conference of the American Association for Artificial Intelligence</td>  
   </tr>
   <tr>
     <td class="tg-24i8">ICONIP</td>
     <td class="tg-24i8">A</td>
     <td class="tg-24i8">Jun 10</td>
-    <td class="tg-24i8"><a href="http://www.iconip2017.org/papers.html">iconip2017</a></td>	  
+    <td class="tg-24i8"><a href="http://www.iconip2017.org/papers.html">iconip2017</a></td>	
+	  <td class="tg-24i8">International Conference on Neural Information Processing</td>  
   </tr>
   <tr>
     <td class="tg-24i8">ICWS</td>
     <td class="tg-24i8">A</td>
 	  <td class="tg-24i8"><SPAN style="TEXT-DECORATION: line-through">February 6</SPAN></td>
-    <td class="tg-24i8"><a href="http://icws.org/2017/">icws2017</a></td>	  
+    <td class="tg-24i8"><a href="http://icws.org/2017/">icws2017</a></td>	
+	  <td class="tg-24i8">IEEE International Conference on Web Services</td>  
   </tr>
   <tr>
     <td class="tg-24i8">ICSOC</td>
     <td class="tg-24i8">A</td>
     <td class="tg-24i8">June 6</td>
-    <td class="tg-24i8"><a href="http://www.icsoc.spilab.es/">icsoc2017</a></td>	  
+    <td class="tg-24i8"><a href="http://www.icsoc.spilab.es/">icsoc2017</a></td>
+	  <td class="tg-24i8">International Conference on Service Oriented Computing</td>  
   </tr>	
   <tr>
     <td class="tg-24i8">CSCW</td>
     <td class="tg-24i8">A</td>
     <td class="tg-24i8">May 27</td>
-    <td class="tg-24i8"><a href="https://cscw.acm.org/2017/">CSCW2017</a></td>	  
+    <td class="tg-24i8"><a href="https://cscw.acm.org/2017/">CSCW2017</a></td>	 
+	  <td class="tg-24i8">ACM Conference on Computer Supported Cooperative Work</td>  
   </tr>	
   <tr>
     <td class="tg-24i8">PAKDD</td>
     <td class="tg-24i8">A</td>
     <td class="tg-24i8"></td>
-    <td class="tg-24i8"><a href="">PAKDD2018</a></td>	  
+    <td class="tg-24i8"><a href="">PAKDD2018</a></td>	
+	  <td class="tg-24i8">Pacific-Asia Conference on Knowledge Discovery and Data Mining</td>  
   </tr>	
-	
+  <tr>
+    <td class="tg-24i8">ICIS</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="http://icis2017.aisnet.org/">ICIS2017</a></td>	  
+	  <td class="tg-24i8">International Conference on Information Systems</td>  
+  </tr>	
+  <tr>
+    <td class="tg-24i8">ECAI</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="http://ecai.ro/">ECAI2017</a></td>	
+	  <td class="tg-24i8">European Conference on Artificial Intelligence</td>  
+  </tr>	
+  <tr>
+    <td class="tg-24i8">IJCNN</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="http://www.ijcnn.org/">IJCNN2017</a></td>
+	  <td class="tg-24i8">IEEE International Joint Conference on Neural Networks</td>  
+  </tr>	
+  <tr>
+    <td class="tg-24i8">AIM</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://web.fe.up.pt/~epia2017/thematic-tracks/aim/">AIM2017</a></td>	 
+	  <td class="tg-24i8">Artificial Intelligence in Medicine</td>  
+  </tr>	
 </table>
 <br>
 		<p>For more information, please check:</p>
