--- a/calendar.html
+++ b/calendar.html
@@ -195,6 +195,69 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
     <td class="tg-24i8"><a href="https://web.fe.up.pt/~epia2017/thematic-tracks/aim/">AIM2017</a></td>	 
 	  <td class="tg-24i8">Artificial Intelligence in Medicine</td>  
   </tr>	
+  <tr>
+    <td class="tg-24i8">IDA</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="http://www.dcs.bbk.ac.uk/ida2017/">IDA2017</a></td>	 
+	  <td class="tg-24i8">intelligent data analysis</td>  
+  </tr>	
+  <tr>
+    <td class="tg-24i8">AMCIS</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">AMCIS2017</a></td>	 
+	  <td class="tg-24i8">Americas Conference on Information Systems</td>  
+  </tr>	
+  <tr>
+    <td class="tg-24i8">OCIS</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">OCIS2017</a></td>	 
+	  <td class="tg-24i8">AoM Organizational Communication and Information Systems</td>  
+  </tr>	
+  <tr>
+    <td class="tg-24i8">ECIS</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
+	  <td class="tg-24i8">European Conference on Information Systems</td>  
+  </tr>	
+  <tr>
+    <td class="tg-24i8">CaiSE</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
+	  <td class="tg-24i8">International Conference on Advanced Information Systems Engineering</td>  
+  </tr>	
+  <tr>
+    <td class="tg-24i8">CoopIS</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
+	  <td class="tg-24i8">International Conference on Cooperative Information Systems</td>  
+  </tr>	
+  <tr>
+    <td class="tg-24i8">PACIS</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
+	  <td class="tg-24i8">Pacific Asia Conference on Information Systems</td>  
+  </tr>	
+  <tr>
+    <td class="tg-24i8">ISD</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
+	  <td class="tg-24i8">International Conference on Information Systems Development</td>  
+  </tr>	
+	  <tr>
+    <td class="tg-24i8">ICDE</td>
+    <td class="tg-24i8">A×</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
+	  <td class="tg-24i8">International Conference on Data Engineering </td>  
+  </tr>
 </table>
 <br>
 		<p>For more information, please check:</p>
