--- a/calendar.html
+++ b/calendar.html
@@ -253,7 +253,7 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
   </tr>	
 	  <tr>
     <td class="tg-24i8">ICDE</td>
-    <td class="tg-24i8">A×</td>
+    <td class="tg-24i8">A*</td>
     <td class="tg-24i8"></td>
     <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
 	  <td class="tg-24i8">International Conference on Data Engineering </td>  
