--- a/calendar.html
+++ b/calendar.html
@@ -43,7 +43,7 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
   </tr>
   <tr>
     <td class="tg-24i8">CIKM</td>
-    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8">A</td>
     <td class="tg-24i8">16, May.</td>
     <td class="tg-24i8"><a href="http://cikm2017.org/">cikm2017</a></td>
     <td class="tg-24i8">International Conference on Information and Knowledge Management</td>  
@@ -257,6 +257,41 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
     <td class="tg-24i8"></td>
     <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
 	  <td class="tg-24i8">International Conference on Data Engineering </td>  
+  </tr>
+	  <tr>
+    <td class="tg-24i8">UAI</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
+	  <td class="tg-24i8">Conference in Uncertainty in Artificial Intelligence </td>  
+  </tr>
+	  <tr>
+    <td class="tg-24i8">ICDAR</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
+	  <td class="tg-24i8">IEEE International Conference on Document Analysis and Recognition</td>  
+  </tr>
+		  <tr>
+    <td class="tg-24i8">ICPR</td>
+    <td class="tg-24i8">B</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
+	  <td class="tg-24i8">International Conference on Pattern Recognition</td>  
+  </tr>
+		  <tr>
+    <td class="tg-24i8">AISTATS</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
+	  <td class="tg-24i8">International Conference on Artificial Intelligence and Statistics</td>  
+  </tr>
+		  <tr>
+    <td class="tg-24i8">ICLR</td>
+    <td class="tg-24i8">No rank</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
+	  <td class="tg-24i8">International Conference on Learning Representations</td>  
   </tr>
 </table>
 <br>
