--- a/calendar.html
+++ b/calendar.html
@@ -314,7 +314,19 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
 <ul>Time: 3:00pm - 4:00pm Monday per fortnight</ul>
 
 <ul>Venue: K17, 401K</ul>
+		
+<br><br>
+<li style="font-size:30px">Learning Group</li><br>
+<p>Coordinator: <a href="http://www.cse.unsw.edu.au/~z5122290/">Manqing Dong</a></p>
+<p>Time&Place</p>
+ 
+<ul>Time: 3:00pm - 4:00pm Monday per fortnight</ul>
 
+<ul>Venue: K17, 401K</ul>
+		
+<p>Order</p><br>
+		<p></p>
+<!--
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
 .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;border-top-width:1px;border-bottom-width:1px;}
@@ -387,14 +399,7 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
   </tr>
 </table>
 
-<br><br>
-<li style="font-size:30px">Learning Group</li><br>
-<p>Coordinator: <a href="http://www.cse.unsw.edu.au/~z5122290/">Manqing Dong</a></p>
-<p>Time&Place</p>
- 
-<ul>Time: 3:00pm - 4:00pm Monday per fortnight</ul>
 
-<ul>Venue: K17, 401K</ul>
 
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
@@ -469,7 +474,7 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
     <td class="tg-24i8"></td>
     <td class="tg-24i8"></td>
   </tr>
-</table>
+</table>-->
 		
 		<br>
 		<p>Slides of former reading and learning group, please visit:</p>
