--- a/calendar.html
+++ b/calendar.html
@@ -325,7 +325,7 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
 <ul>Venue: K17, 401K</ul>
 		
 <p>Order</p><br>
-		<p></p>
+		<p>Xiang Zhang; Chaoran Huang; Guangyang Qi; Shuai Zhang; Xiaodong Ning; Manqing Dong; Xigang Yuan; Kaixuan Chen</p>
 <!--
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
