--- a/calendar.html
+++ b/calendar.html
@@ -303,7 +303,7 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
 		
 <li style="font-size:30px">Reading and Learning Group </li><br>
 <p>Reading Group Coordinator: <a href="http://1015xzhang.wixsite.com/mysite">Xiang Zhang</a></p>
-<p>Learnin Group Coordinator: <a href="http://www.cse.unsw.edu.au/~z5122290/">Manqing Dong</a></p>
+<p>Learning Group Coordinator: <a href="http://www.cse.unsw.edu.au/~z5122290/">Manqing Dong</a></p>
 <p>Here are some rules that you need to follow:</p>
 
 <ul>1) the reading group meetings will be held on Wednesday every two weeks;</ul>
