--- a/calendar.html
+++ b/calendar.html
@@ -299,6 +299,7 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
 		<ul><a href="http://www.wikicfp.com/cfp/">WIKICFP</a></ul>
 		<ul><a href="http://portal.core.edu.au/conf-ranks/">Core rank</a></ul>
 		<ul><a href="http://lipn.univ-paris13.fr/~bennani/CSRank.html/">CSRank</a></ul>
+		<ul><a href="http://jeffhuang.com/best_paper_awards.html">Best paper award</a></ul>
 		<ul><a href="http://data-mining.philippe-fournier-viger.com/the-top-journals-and-conferences-in-data-mining-data-science/">Top Conference and Journal</a></ul>
 <br><br>
 		
