--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: InsData
 <section class="hero diagonal">
 	<div class="container"> 
 		<!--<h2 class="editable">InsData</h2>-->
-		<p style="font-size: 1.4rem;">InsData is dedicated on getting inspriations from data via designing and developing sound and robust data management and analysis techniques and systems. We work on a wide spectrum of problems across the areas of data mining, machine learning and pervasive intelligence, especially those that arise in the application domains of recommender systems, human activity recognition and anomaly detection.</p>
+		<p style="font-size: 1.4rem;">InsData is dedicated on getting inspriations from data via designing and developing sound and robust data management and analysis techniques and systems. We work on a wide spectrum of problems across the areas of data mining, machine learning and pervasive intelligence, especially those that arise in the application domains of Internet of Things, Cyber-Physical Systems, information filtering and recommending, and human activity recognition and modeling.</p>
 	</div>
 </section>
 
@@ -13,6 +13,8 @@ title: InsData
 	<div class="container halves">
 		<div>
 			<h3 class="editable"><font color="FF0000">News</font></h3>
+      <p class="editable">Congratulations to Shuai Zhang for his paper accepted in SIGIR 2017!</p>
+      <p class="editable">Welcome Dalin Zhang to join our group in semester 1 2017</p>
 			<p class="editable">Shuai Zhang, Xiang Zhang, Manqing Dong, XiaoDong Ning join the KDD Cup 2017 contest</p>
 			<p class="editable">Welcome Kaixuan Chen to join our group in semester 1 2017</p>
 			<p class="editable">Manqing dong, Shuai Zhang, Chaoran Huang join the IJCAI 2017 Alibaba Tianchi Contest</p>
