--- a/publication.html
+++ b/publication.html
@@ -6,6 +6,9 @@ subtitle: The goal of education is the advancement of knowledge and the dissemin
 	<div class="container">
 		<div>
 			<h3 class="editable">Conference</h3>
+			<ol>
+			<li>Shuai Zhang, Lina Yao and Xiwei Xu, AutoSVD++: An Efficient Hybrid Collaborative Filtering Model via Contractive Auto-encoders. The 40th Annual ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR 2017). Tokyo, Japan, August 7 - 11, 2017.</li>
+			</ol>
 			<h3 class="editable">Journal</h3>
 
 		</div>
