--- a/publication.html
+++ b/publication.html
@@ -7,7 +7,7 @@ subtitle: The goal of education is the advancement of knowledge and the dissemin
 		<div>
 			<h3 class="editable">Conference</h3>
 			<ol>
-			<li>Shuai Zhang, Lina Yao and Xiwei Xu, AutoSVD++: An Efficient Hybrid Collaborative Filtering Model via Contractive Auto-encoders. The 40th Annual ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR 2017). Tokyo, Japan, August 7 - 11, 2017.</li>
+			<li>Shuai Zhang, Lina Yao and Xiwei Xu, AutoSVD++: An Efficient Hybrid Collaborative Filtering Model via Contractive Auto-Encoders. The 40th Annual ACM SIGIR Conference on Research and Development in Information Retrieval (<a href="http://sigir.org/sigir2017/"><abbr title="The 40th International Annual ACM SIGIR Conference">SIGIR</abbr> 2017</a>). Tokyo, Japan, August 7 - 11, 2017.</li>
 			</ol>
 			<h3 class="editable">Journal</h3>
 
