--- a/calendar.html
+++ b/calendar.html
@@ -293,6 +293,13 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
     <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
 	  <td class="tg-24i8">International Conference on Learning Representations</td>  
   </tr>
+		  <tr>
+    <td class="tg-24i8">IUI</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8"><a href="https://amcis2017.aisnet.org/">ECIS2017</a></td>	 
+	  <td class="tg-24i8">International Conference on Intelligent User Interfaces</td>  
+  </tr>
 </table>
 <br>
 		<p>For more information, please check:</p>
