--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@ title: InsData
 	<div class="container halves">
 		<div>
 			<h3 class="editable"><font color="FF0000">News</font></h3>
+			<p class="editable">Congratulations to Chaoran for his paper accepted in ICWS 2017!</p>
+      			<p class="editable">Congratulations to Usama for his paper accepted in ICWS 2017!</p>
      		        <p class="editable">Congratulations to Shuai Zhang for his paper accepted in SIGIR 2017!</p>
       			<p class="editable">Welcome Dalin Zhang to join our group in semester 1 2017</p>
-			<p class="editable">Shuai Zhang, Xiang Zhang, Manqing Dong, XiaoDong Ning join the KDD Cup 2017 contest</p>
-			<p class="editable">Welcome Kaixuan Chen to join our group in semester 1 2017</p>
-			<p class="editable">Manqing dong, Shuai Zhang, Chaoran Huang join the IJCAI 2017 Alibaba Tianchi Contest</p>
 		</div>
 
 	</div>
