--- a/Publication.htm
+++ b/Publication.htm
@@ -129,21 +129,11 @@
         <h3 class="title-bg" id="conference"> Conference</h3>
         <!--Testimonials-->
         <div class="span6">
-            <p class="quote-text side">AutoSVD++: An Efficient Hybrid Collaborative Filtering Model via Contractive Auto-encoders.<cite> <b>Shuai Zhang, Lina Yao</b> and Xiwei Xu, The 40th Annual ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR 2017). Tokyo, Japan, August 7 - 11, 2017.</cite></p> 
-        		<p class="quote-text side"><a href="papers/ICWS2017_ExpertService_May22_Chaoran.pdf">Software Expert Recommendation via Knowledge Domain Embeddings in Stack Overflow.</a><cite> <b>Chaoran Huang, Lina Yao, Xianzhi Wang</b>,Boualem Benatallah, Quan Z Sheng. The 24th IEEE International Conference on Web Services (ICWS 2017). Honolulu, Hawaii, USA, June 25 - 30, 2017.</cite></p>
+								<p class="quote-text side"><a href="https://arxiv.org/pdf/1704.00551.pdf">AutoSVD++: An Efficient Hybrid Collaborative Filtering Model via Contractive Auto-encoders.</a><cite> <b>Shuai Zhang, Lina Yao</b> and Xiwei Xu, The 40th Annual ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR 2017). Tokyo, Japan, August 7 - 11, 2017.</cite></p> 
 				</div>
 
-        <div class="span2">
-            <p>
-            <a href="https://arxiv.org/pdf/1704.00551.pdf">
-                <i class="icon-file"></i>
-                Link to Paper
-            </a>
-            </p>
-        </div>
-
         <div class="span6">
-            <p class="quote-text side">Software Expert Recommendation via Knowledge Domain Embeddings in Stack Overflow.<cite> <b>Chaoran Huang, Lina Yao,</b> Xianzhi Wang, Boualem Benatallah and Quan Z. Sheng, The 24th IEEE International Conference on Web Services (ICWS 2017). Honolulu, Hawaii, USA, June 25 - June 30, 2017.</cite></p>
+								<p class="quote-text side"><a href="papers/ICWS2017_ExpertService_May22_Ch    aoran.pdf">Software Expert Recommendation via Knowledge Domain Embeddings in Stack Overflow.</a><cite> <b>Chaoran Huang, Lina Yao,</b> Xianzhi Wang, Boualem Benatallah and Quan Z. Sheng, The 24th IEEE International Conference on Web Services (ICWS 2017). Honolulu, Hawaii, USA, June 25 - June 30, 2017.</cite></p>
         </div>
 
         <div class="span6">
