Chaoran: Add wiki section and link to GPU wiki page
Signed-off-by: Chaoran Huang <chaoran.huang@unsw.edu.au>

--- a/Groupwiki.htm
+++ b/Groupwiki.htm
@@ -128,7 +128,7 @@
             </article>
 
 
-            <!-- Blog Post 1 -->
+            <!-- Blog Post 2 -->
             <article class="clearfix">
                 <a href="Groupwiki_Machine.htm"><img src="img/machine_learning.jpg" alt="Post Thumb" class="align-left" style="width: 270px; height: 200px; object-fit: cover;"></a>
                 <h4 class="title-bg"><a href="Groupwiki_Machine.htm">Machine Learning Tutorial For Beginners</a></h4>
@@ -140,6 +140,20 @@
                             <li><i class="icon-tags"></i> <a href="#">Machine Learning</a>, <a href="#">Tutorial</a></li>
                         </ul>
                     </div>
+            </article>
+
+            <!-- Blog Post 3 -->
+            <article class="clearfix">
+                <a href="Groupwiki_Machine.htm"><img src="img/gpu_server.jpg" alt="Post Thumb" class="align-left" style="width: 270px; height: 200px; object-fit: cover;"></a>
+                <h4 class="title-bg"><a href="Groupwiki_GPU.htm">Wiki of Group GPU Server</a></h4>
+                <a href="Groupwiki_GPU.htm"><button class="btn btn-mini btn-inverse" type="button">Read more</button></a>
+                <div class="post-summary-footer">
+                    <ul class="post-data-3">
+                        <li><i class="icon-calendar"></i> 03/07/17</li>
+                        <li><i class="icon-user"></i> <a href="#">Chaoran Huang</a></li>
+                        <li><i class="icon-tags"></i> <a href="#"></a> <a href="#">Wiki</a></li>
+                    </ul>
+                </div>
             </article>
 
 
