--- a/Groupwiki_GPU.htm
+++ b/Groupwiki_GPU.htm
@@ -33,7 +33,6 @@
 
 
 </head>
-
 <body class="home">
 <!-- Color Bars (above header)-->
 <div class="color-bar-1"></div>
@@ -131,14 +130,168 @@
                             7 Seagate Enterprise Capacity 2.5 HDDs(2TB SATA 6Gb/s 7200rpm 128MB). DrStrange runs
                             standard CentOS 7.
                         </p>
-
-                        <h4>Getting Started</h4>
-                        <h5>Accessing the Server</h5>
                         <p>
-
+                            <b>Global Available software</b>:<br>
+                            GNU GCC 4.8.5 <br>
+                            Python 2.7/3.6 with Numpy 1.12.1 , pandas 0.20.1 , tensorflow-gpu 1.0.1 , scikit-tensor 0.1 ,
+                            scipy 0.19.0<br>
+                            openjdk 1.8.0_131
                         </p>
 
 
+
+
+                        <h4>Getting Started</h4>
+                        <h5>Accessing the Server</h5>
+                        <p>DrStrange runs linux, the server can be accessed using
+                            <a href="https://www.ssh.com/">SSH</a>, thus SSH client is required. Unix based systems,
+                            such as MacOS(Mac OS X), OpenBSD and most Linux distributions, usually already have OpenSSH
+                            client included out of box. However, installation of one of such client on Microsoft Windows
+                            systems is compulsory. SSH client can be found by your preference, yet here in this Wiki,
+                            PuTTY is chosen for demonstration.
+                        </p>
+                        <p>
+                            <b>Note:</b> Password authentication for SSH is disabled due to security reasons. Public key
+                            for SSH is required to be sent to one of the administrators, by the time of account creation,
+                            change of private key, or requesting authentication of new hosts( Copying private key file to
+                            new hosts is also feasible to enable authentication, but not recommended).<br>
+                            <a href="#ssh_key_gen"><b>Generate a key for SSH</b></a>
+                        </p>
+
+                        <b id="ssh_key_gen">Generating SSH key pair</b>
+                        <p>If you don't have a key pair for SSH yet, please following the instructions to generate the
+                            key pair. Otherwise, you can jump to <a href="#ssh_login"><b>Login</a></b> section.
+                        </p>
+                        <p>Unix based systems aformentioned often have OpenSSH client bultin, which also ususally
+                            shipped with key generators, and its binary excutable is typically called `ssh-keygen`.
+                            A simple exmaple of usage can be as following:
+                        </p>
+                        <pre class="well">
+$ ssh-keygen
+Generating public/private rsa key pair.
+Enter file in which to save the key (/home/USERNAME/.ssh/id_rsa):
+Enter passphrase (empty for no passphrase):
+Enter same passphrase again:
+Your identification has been saved in /home/USERNAME/.ssh/id_rsa.
+Your public key has been saved in /home/USERNAME/.ssh/id_rsa.pub.
+The key fingerprint is:
+00:50:7f:29:e2:2c:37:af:b2:8f:cf:e4:50:2f:c8:82 USERNAME@YOURCOMPUTER
+The key's randomart image is:
++--[ RSA 2048]----+
+|  .oo            |
+|     o   .       |
+|    . + o        |
+|   o . +         |
+|  . *   S        |
+|.. = +           |
+|E + o o          |
+| ..* o           |
+|  o=*            |
++-----------------+
+                        </pre>
+                        <p>
+                            Tutorial for "KEY GENERATOR FOR PUTTY ON WINDOWS" can be found
+                            <a href="https://www.ssh.com/ssh/putty/windows/puttygen" target="_blank">here</a>.
+                        </p>
+
+                        <b id="ssh_login">Login</b>
+                        <p>This section is for ones not familar or have little with Linux systems. Experienced users
+                        can skip by clicking <a href="#start_comp">here</a> to start computing.
+                        </p>
+                        <pre class="well">
+$ ssh USERNAME@drstrange.cse.unsw.edu.au
+                        </pre>
+                        <p>As our server is authenticated by SSH keys, you would now logged in, and get
+                            the message below:
+                        <p/>
+                        <pre class="well">
+		You are accesing a computer owned by:
+
+	            Service Oriented Computing Group,
+		    School of Computer Science and Engineering,
+		    UNSW Sydney
+
+	    ***** This service is for authorised clients only *****
+
+ ****************************************************************************
+ *                                                                          *
+ * WARNING:     It is a criminal offence to:                                *
+ *                                                                          *
+ *              i.  Obtain access to data without permission                *
+ *                        (Penalty 2 years imprisonment)                    *
+ *              ii. Damage, delete, alter or insert data without permission *
+ *                        (Penalty 10 years imprisonment)                   *
+ *                                                                          *
+ ****************************************************************************
+Last login: Tue Jul  4 15:56:25 2017 from WHO.KNOW.THIS.COMPUTER
+                        </pre>
+                        <p>Tutorial for "How To Use SSH Keys with PuTTY (Windows users)" can be found
+                            <a href="https://www.digitalocean.com/community/tutorials/how-to-use-ssh-keys-with-putty-on-digitalocean-droplets-windows-users"
+                               target="_blank">
+                                here
+                            </a>.
+                        </p>
+
+
+
+                        <h5 id="start_comp">Starting computing</h5>
+                        <p>As the server is accessed via network, and connection outside CSE building can be unstable,
+                        let me first introduce you <a href="https://www.gnu.org/software/screen/">GNU Screen</a>.
+                        </p>
+                        <b id="screen">GNU Screen</b>
+                        <p> Screen is
+                            a full-screen window manager that multiplexes a physical terminal between several processes,
+                            typically interactive shells. Thus using Screen can help your remote processes survive a
+                            network disruption. Screen is installed on Drstrange, and you can simply fork screen by
+
+                        <pre>$ screen</pre>
+                        a new shell ocuping the whole terminal window should appear, and don't panic, this is a new
+                        instance of shell forked by Screen, your jobs before is not killed and still running. In this
+                        Screen-forked shell you can do things as ususal.<br>
+                        The magic here is you can detach a Screen, and later reattach it. By default, a Screen
+                        session can be deattached by key combination <b>`Ctrl-a`</b> followed by <b>`d`</b>.<br>
+                        To show a list of Screens invoked,
+                        <pre>$ screen -ls</pre>
+                        and it will give you an output similar to this:
+                        <pre>
+$screen -ls
+There is a screen on:
+	11123.pts-1.drstrange	(Detached)
+1 Socket in /var/run/screen/S-chaoranh.
+                        </pre>
+                        In this example 11123 is the pid(Process ID) of the detached Screen, which can be reattached by
+                        <pre>screen -r 11123</pre>
+                        and screen with pid 11123 will be reattached, and display as full terminal windows size.
+                        </p>
+                        <b id="goustat">Check GPU Status</b>
+                        <p>It is generally recommended to check GPU status before running a gpu accelarated program, so
+                            that we can avoid interrupting jobs owned by someone else. Also you may not want to fork your
+                            job on a busy GPU unit. Check GPU status typically can be done by command <b>`nvidia-smi`</b>.
+                            While here in our machine, a more user friendly python script is configured and of which the
+                            usage is encouraged.<br>
+                            You can check the usage by<pre>$gpustat -cpu</pre>
+                        which will give you <b>GPU number, GPU name, temprature, GPU ultilization rate, memory usage,
+                        user, process name</b> accordingly in different colors.
+                        </p>
+                        <b id="gpumask">Masking GPUs</b>
+                        <p>Some GPU programs are designed to utilize multiple GPUs, and this can largely save time
+                            consumed on trainning massive models. Somehow this often preventing other users from
+                            conducting experiments, especially TensorFlow based ones, which are by default allocating
+                            all available memory at start. As our machine have 6 NVIDIA Titan X pascal GPUs, which is
+                            quite powerful, using all 6 GPUs at once is often over-kill. To avoid such situation, a mask
+                            can be introduced: <b>`CUDA_VISIBLE_DEVICES`</b>.<br>
+                            `CUDA_VISIBLE_DEVICES` is an environment variable, which can be simply added in frot of
+                            linux commands at each run. Syntax can be:
+                            <pre>
+CUDA_VISIBLE_DEVICES=1      //Only device 1 will be seen
+CUDA_VISIBLE_DEVICES=0,1    //Devices 0 and 1 will be visible
+CUDA_VISIBLE_DEVICES=”0,1”  //Same as above, quotation marks are optional
+CUDA_VISIBLE_DEVICES=0,2,3  //Devices 0, 2, 3 will be visible; device 1, 4, 5 is masked
+                             </pre>
+                        For example, you have a python script call <b>`eg.py`</b>, which you want spawn it only on
+                        <b>`GPU device 0`</b>, this can be done via:
+                        <pre>CUDA_VISIBLE_DEVICES=0 python eg.py</pre>
+                        </p>
                     </div>
 
                     <div class="post-summary-footer">
