--- a/Groupwiki.htm
+++ b/Groupwiki.htm
@@ -145,7 +145,7 @@
             <!-- Blog Post 3 -->
             <article class="clearfix">
                 <a href="Groupwiki_Machine.htm"><img src="img/gpu_server.jpg" alt="Post Thumb" class="align-left" style="width: 270px; height: 200px; object-fit: cover;"></a>
-                <h4 class="title-bg"><a href="Groupwiki_GPU.htm">Wiki of Group GPU Server</a></h4>
+                <h4 class="title-bg"><a href="Groupwiki_GPU.htm">Wiki of DrStrange: Group GPU Accelerated Computing Server</a></h4>
                 <a href="Groupwiki_GPU.htm"><button class="btn btn-mini btn-inverse" type="button">Read more</button></a>
                 <div class="post-summary-footer">
                     <ul class="post-data-3">
