--- a/Groupwiki_GPU.htm
+++ b/Groupwiki_GPU.htm
@@ -330,7 +330,7 @@ config.gpu_options.per_process_gpu_memory_fraction = 0.4
 session = tf.Session(config=config, ...)
                     </pre>
 
-                        More details is available
+                        More details are available
                         <a href="https://www.tensorflow.org/tutorials/using_gpu#allowing_gpu_memory_growth" target="_blank">
                             here
                         </a>.
@@ -353,7 +353,7 @@ session = tf.Session(config=config, ...)
                 <div class="post-body about-author">
                     <img src="img/Group websites/chaoran.jpg" alt="author" style="height: 80px;">
                     <h4>About Chaoran Huang</h4>
-                    Chaoran Huang is a PhD candidate in our group, and he manages the GPU server. More details is
+                    Chaoran Huang is a PhD candidate in our group, and he manages the GPU server. More details are
                     available at <a href="http://www.cse.unsw.edu.au/~chaoranh/">his personal webpage</a>.
                 </div>
             </section>
