Chaoran: Correction of typos
Signed-off-by: Chaoran Huang <chaoran.huang@unsw.edu.au>

--- a/Groupwiki_GPU.htm
+++ b/Groupwiki_GPU.htm
@@ -311,7 +311,7 @@ CUDA_VISIBLE_DEVICES=0,2,3  //Devices 0, 2, 3 will be visible; device 1, 4, 5 is
                         <pre>$ CUDA_VISIBLE_DEVICES=0 python eg.py</pre>
                         </p>
                         <b id="tf_mem_growth">TensorFLow: Allowing GPU Memory Growth</b>
-                        <p>Since Tensorflow is considerably popular in our group and many have not program properly with it
+                        <p>Since Tensorflow is considerably popular in our group and many have not programed properly with it
                             so far, I feel necessary to propose another handy way to use GPU resource more efficiently,
                             that is to control the usage of memory, to only grow the memory usage as is needed by the process.
                             This can be done by set parameter <b>`allow_growth`</b> to be <b>`True`</b> when starting the
